# hyper-requests

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml
hyper_requests/: __init__.py  request_builder.py  threader.py
src/: request_builder.py  threader.py
test/: test_threader_setup.py
test/performance/: test_performance.py
test/unit/: test_check_request_params.py  test_response.py  test_threader.py  test_threader_setup.py
