[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "hyper-requests"
version = "0.0.3"
authors = [
  { name="Ed Jones", email="ejones84@icloud.com" },
]
description = "Concurrent request HTTP execution librar"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/edjones84/hyper-requests"
"Bug Tracker" = "https://github.com/edjones84/hyper-requests/issues"
