[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "hyper-requests"
version = "0.0.12"
authors = [
  { name="Ed Jones", email="ejones84@icloud.com" },
]
description = "Concurrent request HTTP execution library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests ~= 2.32.2",
    "nest-asyncio ~=1.6.0",
]

[project.urls]
"Homepage" = "https://github.com/edjones84/hyper-requests"
"Bug Tracker" = "https://github.com/edjones84/hyper-requests/issues"
